cdk.out/FoundationWebApp.template.json
{
 "Description": "Foundation Web App (tag:foundation-web-app)",
 "Resources": {
  "CMK56817A4C": {
   "Type": "AWS::KMS::Key",
   "Properties": {
    "Description": "BLEA Guest Sample: CMK for Ec2App",
    "EnableKeyRotation": true,
    "KeyPolicy": {
     "Statement": [
      {
       "Action": "kms:*",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::739275479148:root"
          ]
         ]
        }
       },
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/CMK/Resource"
   }
  },
  "CMKAliasFD5A95C9": {
   "Type": "AWS::KMS::Alias",
   "Properties": {
    "AliasName": "alias/FoundationWebApp",
    "TargetKeyId": {
     "Fn::GetAtt": [
      "CMK56817A4C",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/CMK/Alias/Resource"
   }
  },
  "NetworkingVpc6B5E6F44": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.100.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/Resource"
   }
  },
  "NetworkingVpcPublicSubnet1Subnet918289EE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.100.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet1/Subnet"
   }
  },
  "NetworkingVpcPublicSubnet1RouteTable8FB3C18A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "NetworkingVpcPublicSubnet1RouteTableAssociationD13830EA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcPublicSubnet1RouteTable8FB3C18A"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPublicSubnet1Subnet918289EE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "NetworkingVpcPublicSubnet1DefaultRoute80C01FA6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NetworkingVpcIGW21218DAB"
    },
    "RouteTableId": {
     "Ref": "NetworkingVpcPublicSubnet1RouteTable8FB3C18A"
    }
   },
   "DependsOn": [
    "NetworkingVpcVPCGW12E561D8"
   ],
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "NetworkingVpcPublicSubnet1EIP7D5353EC": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet1/EIP"
   }
  },
  "NetworkingVpcPublicSubnet1NATGateway70EEEC07": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NetworkingVpcPublicSubnet1EIP7D5353EC",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPublicSubnet1Subnet918289EE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "NetworkingVpcPublicSubnet1DefaultRoute80C01FA6",
    "NetworkingVpcPublicSubnet1RouteTableAssociationD13830EA"
   ],
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "NetworkingVpcPublicSubnet2Subnet9D9E5AFB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.100.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet2/Subnet"
   }
  },
  "NetworkingVpcPublicSubnet2RouteTable22886677": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "NetworkingVpcPublicSubnet2RouteTableAssociation2D4CEA06": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcPublicSubnet2RouteTable22886677"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPublicSubnet2Subnet9D9E5AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "NetworkingVpcPublicSubnet2DefaultRouteDF98F60F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NetworkingVpcIGW21218DAB"
    },
    "RouteTableId": {
     "Ref": "NetworkingVpcPublicSubnet2RouteTable22886677"
    }
   },
   "DependsOn": [
    "NetworkingVpcVPCGW12E561D8"
   ],
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "NetworkingVpcPublicSubnet2EIP702A8117": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet2/EIP"
   }
  },
  "NetworkingVpcPublicSubnet2NATGatewayB9DAAE57": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NetworkingVpcPublicSubnet2EIP702A8117",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPublicSubnet2Subnet9D9E5AFB"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "NetworkingVpcPublicSubnet2DefaultRouteDF98F60F",
    "NetworkingVpcPublicSubnet2RouteTableAssociation2D4CEA06"
   ],
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PublicSubnet2/NATGateway"
   }
  },
  "NetworkingVpcPrivateSubnet1Subnet717BCE48": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.100.4.0/22",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "NetworkingVpcPrivateSubnet1RouteTable69CC9A73": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "NetworkingVpcPrivateSubnet1RouteTableAssociation761725EA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcPrivateSubnet1RouteTable69CC9A73"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPrivateSubnet1Subnet717BCE48"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "NetworkingVpcPrivateSubnet1DefaultRouteDE58E6A0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NetworkingVpcPublicSubnet1NATGateway70EEEC07"
    },
    "RouteTableId": {
     "Ref": "NetworkingVpcPrivateSubnet1RouteTable69CC9A73"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "NetworkingVpcPrivateSubnet2Subnet4313381B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.100.8.0/22",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "NetworkingVpcPrivateSubnet2RouteTableAE92CE40": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "NetworkingVpcPrivateSubnet2RouteTableAssociation9EFBB61D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcPrivateSubnet2RouteTableAE92CE40"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPrivateSubnet2Subnet4313381B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "NetworkingVpcPrivateSubnet2DefaultRoute5BF16047": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NetworkingVpcPublicSubnet2NATGatewayB9DAAE57"
    },
    "RouteTableId": {
     "Ref": "NetworkingVpcPrivateSubnet2RouteTableAE92CE40"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "NetworkingVpcProtectedSubnet1SubnetF97DE33B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.100.12.0/22",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Protected"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/ProtectedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/ProtectedSubnet1/Subnet"
   }
  },
  "NetworkingVpcProtectedSubnet1RouteTable2C1558E9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/ProtectedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/ProtectedSubnet1/RouteTable"
   }
  },
  "NetworkingVpcProtectedSubnet1RouteTableAssociation011790AB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcProtectedSubnet1RouteTable2C1558E9"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcProtectedSubnet1SubnetF97DE33B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/ProtectedSubnet1/RouteTableAssociation"
   }
  },
  "NetworkingVpcProtectedSubnet2SubnetE110C692": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.100.16.0/22",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Protected"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/ProtectedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/ProtectedSubnet2/Subnet"
   }
  },
  "NetworkingVpcProtectedSubnet2RouteTableA434E57C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/ProtectedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/ProtectedSubnet2/RouteTable"
   }
  },
  "NetworkingVpcProtectedSubnet2RouteTableAssociation01AFDB7E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcProtectedSubnet2RouteTableA434E57C"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcProtectedSubnet2SubnetE110C692"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/ProtectedSubnet2/RouteTableAssociation"
   }
  },
  "NetworkingVpcIGW21218DAB": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/IGW"
   }
  },
  "NetworkingVpcVPCGW12E561D8": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "NetworkingVpcIGW21218DAB"
    },
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/VPCGW"
   }
  },
  "NetworkingVpcFlowLogsFlowLog7DF32A67": {
   "Type": "AWS::EC2::FlowLog",
   "Properties": {
    "LogDestination": {
     "Fn::GetAtt": [
      "NetworkingFlowLogBucket33187957",
      "Arn"
     ]
    },
    "LogDestinationType": "s3",
    "ResourceId": {
     "Ref": "NetworkingVpc6B5E6F44"
    },
    "ResourceType": "VPC",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/Vpc/FlowLogs"
     }
    ],
    "TrafficType": "ALL"
   },
   "DependsOn": [
    "NetworkingFlowLogBucketPolicy1EE356A6"
   ],
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/FlowLogs/FlowLog"
   }
  },
  "NetworkingVpcS3GWEndpointA935E1AA": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "NetworkingVpcPrivateSubnet1RouteTable69CC9A73"
     },
     {
      "Ref": "NetworkingVpcPrivateSubnet2RouteTableAE92CE40"
     },
     {
      "Ref": "NetworkingVpcProtectedSubnet1RouteTable2C1558E9"
     },
     {
      "Ref": "NetworkingVpcProtectedSubnet2RouteTableA434E57C"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Vpc/S3GWEndpoint/Resource"
   }
  },
  "NetworkingKey5DCEF7CD": {
   "Type": "AWS::KMS::Key",
   "Properties": {
    "Description": "BLEA Guest Sample: CMK for Ec2App VPC Flow Logs",
    "EnableKeyRotation": true,
    "KeyPolicy": {
     "Statement": [
      {
       "Action": "kms:*",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::739275479148:root"
          ]
         ]
        }
       },
       "Resource": "*"
      },
      {
       "Action": [
        "kms:Encrypt*",
        "kms:Decrypt*",
        "kms:ReEncrypt*",
        "kms:GenerateDataKey*",
        "kms:Describe*"
       ],
       "Effect": "Allow",
       "Principal": {
        "Service": "delivery.logs.amazonaws.com"
       },
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Key/Resource"
   }
  },
  "NetworkingKeyAlias2BF09FC0": {
   "Type": "AWS::KMS::Alias",
   "Properties": {
    "AliasName": "alias/FoundationWebAppNetworking782B929F",
    "TargetKeyId": {
     "Fn::GetAtt": [
      "NetworkingKey5DCEF7CD",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/Key/Alias/Resource"
   }
  },
  "NetworkingFlowLogBucket33187957": {
   "Type": "AWS::S3::Bucket",
   "Properties": {
    "AccessControl": "Private",
    "BucketEncryption": {
     "ServerSideEncryptionConfiguration": [
      {
       "ServerSideEncryptionByDefault": {
        "KMSMasterKeyID": {
         "Fn::GetAtt": [
          "NetworkingKey5DCEF7CD",
          "Arn"
         ]
        },
        "SSEAlgorithm": "aws:kms"
       }
      }
     ]
    },
    "PublicAccessBlockConfiguration": {
     "BlockPublicAcls": true,
     "BlockPublicPolicy": true,
     "IgnorePublicAcls": true,
     "RestrictPublicBuckets": true
    }
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/FlowLogBucket/Resource"
   }
  },
  "NetworkingFlowLogBucketPolicy1EE356A6": {
   "Type": "AWS::S3::BucketPolicy",
   "Properties": {
    "Bucket": {
     "Ref": "NetworkingFlowLogBucket33187957"
    },
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "s3:*",
       "Condition": {
        "Bool": {
         "aws:SecureTransport": "false"
        }
       },
       "Effect": "Deny",
       "Principal": {
        "AWS": "*"
       },
       "Resource": [
        {
         "Fn::GetAtt": [
          "NetworkingFlowLogBucket33187957",
          "Arn"
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::GetAtt": [
             "NetworkingFlowLogBucket33187957",
             "Arn"
            ]
           },
           "/*"
          ]
         ]
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/FlowLogBucket/Policy/Resource"
   }
  },
  "NetworkingPublicNacl8F0D44A5": {
   "Type": "AWS::EC2::NetworkAcl",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/PublicNacl"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PublicNacl/Resource"
   }
  },
  "NetworkingPublicNaclDefaultAssociationFoundationWebAppNetworkingVpcPublicSubnet1ADE6F7BD4B0B5740": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "NetworkingPublicNacl8F0D44A5"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPublicSubnet1Subnet918289EE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PublicNacl/DefaultAssociationFoundationWebAppNetworkingVpcPublicSubnet1ADE6F7BD/Resource"
   }
  },
  "NetworkingPublicNaclDefaultAssociationFoundationWebAppNetworkingVpcPublicSubnet2485A70714924F09C": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "NetworkingPublicNacl8F0D44A5"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPublicSubnet2Subnet9D9E5AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PublicNacl/DefaultAssociationFoundationWebAppNetworkingVpcPublicSubnet2485A7071/Resource"
   }
  },
  "NetworkingPublicNaclPublicEgress927B5E86": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "NetworkAclId": {
     "Ref": "NetworkingPublicNacl8F0D44A5"
    },
    "Protocol": -1,
    "RuleAction": "allow",
    "RuleNumber": 100
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PublicNacl/PublicEgress/Resource"
   }
  },
  "NetworkingPublicNaclPublicIngressAC30352B": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "NetworkAclId": {
     "Ref": "NetworkingPublicNacl8F0D44A5"
    },
    "Protocol": -1,
    "RuleAction": "allow",
    "RuleNumber": 100
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PublicNacl/PublicIngress/Resource"
   }
  },
  "NetworkingPrivateNacl8E602059": {
   "Type": "AWS::EC2::NetworkAcl",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FoundationWebApp/Networking/PrivateNacl"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PrivateNacl/Resource"
   }
  },
  "NetworkingPrivateNaclDefaultAssociationFoundationWebAppNetworkingVpcPrivateSubnet1784D3D61CE4FF6E8": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "NetworkingPrivateNacl8E602059"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPrivateSubnet1Subnet717BCE48"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PrivateNacl/DefaultAssociationFoundationWebAppNetworkingVpcPrivateSubnet1784D3D61/Resource"
   }
  },
  "NetworkingPrivateNaclDefaultAssociationFoundationWebAppNetworkingVpcPrivateSubnet26CFC9EEE08C73694": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "NetworkingPrivateNacl8E602059"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcPrivateSubnet2Subnet4313381B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PrivateNacl/DefaultAssociationFoundationWebAppNetworkingVpcPrivateSubnet26CFC9EEE/Resource"
   }
  },
  "NetworkingPrivateNaclPrivateEgress8D7BEE42": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "NetworkAclId": {
     "Ref": "NetworkingPrivateNacl8E602059"
    },
    "Protocol": -1,
    "RuleAction": "allow",
    "RuleNumber": 100
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PrivateNacl/PrivateEgress/Resource"
   }
  },
  "NetworkingPrivateNaclPrivateIngressA5CFFFD6": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "NetworkAclId": {
     "Ref": "NetworkingPrivateNacl8E602059"
    },
    "Protocol": -1,
    "RuleAction": "allow",
    "RuleNumber": 120
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Networking/PrivateNacl/PrivateIngress/Resource"
   }
  },
  "Ec2AppAlbSg4F64FD2A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "FoundationWebApp/Ec2App/AlbSg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:ALL PORTS",
      "FromPort": 0,
      "IpProtocol": "tcp",
      "ToPort": 65535
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AlbSg/Resource"
   }
  },
  "Ec2AppAlbSgtoFoundationWebAppEc2AppAppSgFA798B8C80B0A7F425": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "Ec2AppAppSgF34C625B",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "Ec2AppAlbSg4F64FD2A",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AlbSg/to FoundationWebAppEc2AppAppSgFA798B8C:80"
   }
  },
  "Ec2AppAppSgF34C625B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "FoundationWebApp/Ec2App/AppSg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:ALL PORTS",
      "FromPort": 0,
      "IpProtocol": "tcp",
      "ToPort": 65535
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AppSg/Resource"
   }
  },
  "Ec2AppAppSgfromFoundationWebAppEc2AppAlbSg502E2C7C807708FB34": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from FoundationWebAppEc2AppAlbSg502E2C7C:80",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "Ec2AppAppSgF34C625B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "Ec2AppAlbSg4F64FD2A",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AppSg/from FoundationWebAppEc2AppAlbSg502E2C7C:80"
   }
  },
  "Ec2AppAlb7DEFB31D": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     },
     {
      "Key": "access_logs.s3.enabled",
      "Value": "true"
     },
     {
      "Key": "access_logs.s3.bucket",
      "Value": {
       "Ref": "Ec2AppAlbLogBucket1DE66F6A"
      }
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "Ec2AppAlbSg4F64FD2A",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "NetworkingVpcPublicSubnet1Subnet918289EE"
     },
     {
      "Ref": "NetworkingVpcPublicSubnet2Subnet9D9E5AFB"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "NetworkingVpcPublicSubnet1DefaultRoute80C01FA6",
    "NetworkingVpcPublicSubnet1RouteTableAssociationD13830EA",
    "NetworkingVpcPublicSubnet2DefaultRouteDF98F60F",
    "NetworkingVpcPublicSubnet2RouteTableAssociation2D4CEA06"
   ],
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/Alb/Resource"
   }
  },
  "Ec2AppAlbAlbListenerD30090D8": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "Ec2AppAlbAlbListenerAppAsgTargetGroup308E1E51"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "Ec2AppAlb7DEFB31D"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/Alb/AlbListener/Resource"
   }
  },
  "Ec2AppAlbAlbListenerAppAsgTargetGroup308E1E51": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "deregistration_delay.timeout_seconds",
      "Value": "30"
     },
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "Targets": [
     {
      "Id": {
       "Ref": "Ec2AppAppInstance1455355A"
      },
      "Port": 80
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/Alb/AlbListener/AppAsgTargetGroup/Resource"
   }
  },
  "Ec2AppAlbLogBucket1DE66F6A": {
   "Type": "AWS::S3::Bucket",
   "Properties": {
    "AccessControl": "Private",
    "BucketEncryption": {
     "ServerSideEncryptionConfiguration": [
      {
       "ServerSideEncryptionByDefault": {
        "SSEAlgorithm": "AES256"
       }
      }
     ]
    },
    "PublicAccessBlockConfiguration": {
     "BlockPublicAcls": true,
     "BlockPublicPolicy": true,
     "IgnorePublicAcls": true,
     "RestrictPublicBuckets": true
    }
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AlbLogBucket/Resource"
   }
  },
  "Ec2AppAlbLogBucketPolicy6C6759B4": {
   "Type": "AWS::S3::BucketPolicy",
   "Properties": {
    "Bucket": {
     "Ref": "Ec2AppAlbLogBucket1DE66F6A"
    },
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "s3:*",
       "Condition": {
        "Bool": {
         "aws:SecureTransport": "false"
        }
       },
       "Effect": "Deny",
       "Principal": {
        "AWS": "*"
       },
       "Resource": [
        {
         "Fn::GetAtt": [
          "Ec2AppAlbLogBucket1DE66F6A",
          "Arn"
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::GetAtt": [
             "Ec2AppAlbLogBucket1DE66F6A",
             "Arn"
            ]
           },
           "/*"
          ]
         ]
        }
       ]
      },
      {
       "Action": "s3:PutObject",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::582318560864:root"
          ]
         ]
        }
       },
       "Resource": {
        "Fn::Join": [
         "",
         [
          {
           "Fn::GetAtt": [
            "Ec2AppAlbLogBucket1DE66F6A",
            "Arn"
           ]
          },
          "/AWSLogs/739275479148/*"
         ]
        ]
       }
      },
      {
       "Action": "s3:PutObject",
       "Condition": {
        "StringEquals": {
         "s3:x-amz-acl": "bucket-owner-full-control"
        }
       },
       "Effect": "Allow",
       "Principal": {
        "Service": "delivery.logs.amazonaws.com"
       },
       "Resource": {
        "Fn::Join": [
         "",
         [
          {
           "Fn::GetAtt": [
            "Ec2AppAlbLogBucket1DE66F6A",
            "Arn"
           ]
          },
          "/AWSLogs/739275479148/*"
         ]
        ]
       }
      },
      {
       "Action": "s3:GetBucketAcl",
       "Effect": "Allow",
       "Principal": {
        "Service": "delivery.logs.amazonaws.com"
       },
       "Resource": {
        "Fn::GetAtt": [
         "Ec2AppAlbLogBucket1DE66F6A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AlbLogBucket/Policy/Resource"
   }
  },
  "Ec2AppSsmInstanceRole98A9FB18": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore",
     "arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy"
    ],
    "Path": "/"
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/SsmInstanceRole/Resource"
   }
  },
  "Ec2AppAppInstanceInstanceProfileA4F0D336": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "Ec2AppSsmInstanceRole98A9FB18"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AppInstance/InstanceProfile"
   }
  },
  "Ec2AppAppInstance1455355A": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "Encrypted": true,
       "VolumeSize": 10
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "Ec2AppAppInstanceInstanceProfileA4F0D336"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t2.micro",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "Ec2AppAppSgF34C625B",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "NetworkingVpcPrivateSubnet1Subnet717BCE48"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "AppServer"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nsudo yum -y install httpd\nsudo systemctl enable httpd\nsudo systemctl start httpd\necho \"<h1>Hello from $(hostname)</h1>\" > /var/www/html/index.html\nchown apache.apache /var/www/html/index.html"
    }
   },
   "DependsOn": [
    "Ec2AppSsmInstanceRole98A9FB18"
   ],
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AppInstance/Resource"
   }
  },
  "Ec2AppAppAsgInstanceProfile6555344A": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "Ec2AppSsmInstanceRole98A9FB18"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AppAsg/InstanceProfile"
   }
  },
  "Ec2AppAppAsgLaunchConfig7E072488": {
   "Type": "AWS::AutoScaling::LaunchConfiguration",
   "Properties": {
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "Encrypted": true,
       "VolumeSize": 10
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "Ec2AppAppAsgInstanceProfile6555344A"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t2.micro",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "Ec2AppAppSgF34C625B",
       "GroupId"
      ]
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nsudo yum -y install httpd\nsudo systemctl enable httpd\nsudo systemctl start httpd\necho \"<h1>Hello from $(hostname)</h1>\" > /var/www/html/index.html\nchown apache.apache /var/www/html/index.html"
    }
   },
   "DependsOn": [
    "Ec2AppSsmInstanceRole98A9FB18"
   ],
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AppAsg/LaunchConfig"
   }
  },
  "Ec2AppAppAsgASGA1C2034A": {
   "Type": "AWS::AutoScaling::AutoScalingGroup",
   "Properties": {
    "HealthCheckGracePeriod": 60,
    "HealthCheckType": "ELB",
    "LaunchConfigurationName": {
     "Ref": "Ec2AppAppAsgLaunchConfig7E072488"
    },
    "MaxSize": "1",
    "MinSize": "1",
    "Tags": [
     {
      "Key": "Name",
      "PropagateAtLaunch": true,
      "Value": "AppServer"
     }
    ],
    "TargetGroupARNs": [
     {
      "Ref": "Ec2AppAlbAlbListenerAppAsgTargetGroup308E1E51"
     }
    ],
    "VPCZoneIdentifier": [
     {
      "Ref": "NetworkingVpcPrivateSubnet1Subnet717BCE48"
     },
     {
      "Ref": "NetworkingVpcPrivateSubnet2Subnet4313381B"
     }
    ]
   },
   "UpdatePolicy": {
    "AutoScalingScheduledAction": {
     "IgnoreUnmodifiedGroupSizeProperties": true
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AppAsg/ASG"
   }
  },
  "Ec2AppAppAsgScalingPolicykeepSpareCPUE940C04E": {
   "Type": "AWS::AutoScaling::ScalingPolicy",
   "Properties": {
    "AutoScalingGroupName": {
     "Ref": "Ec2AppAppAsgASGA1C2034A"
    },
    "PolicyType": "TargetTrackingScaling",
    "TargetTrackingConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ASGAverageCPUUtilization"
     },
     "TargetValue": 50
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Ec2App/AppAsg/ScalingPolicykeepSpareCPU/Resource"
   }
  },
  "DatastoreDbSg2E466A34": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "FoundationWebApp/Datastore/DbSg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Datastore/DbSg/Resource"
   }
  },
  "DatastoreDbSgfromFoundationWebAppDatastoreDbSg6796B5B1543250A0EDA9": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from FoundationWebAppDatastoreDbSg6796B5B1:5432",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DatastoreDbSg2E466A34",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DatastoreDbSg2E466A34",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Datastore/DbSg/from FoundationWebAppDatastoreDbSg6796B5B1:5432"
   }
  },
  "DatastoreAuroraClusterSubnetsD8325308": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnets for AuroraCluster database",
    "SubnetIds": [
     {
      "Ref": "NetworkingVpcPrivateSubnet1Subnet717BCE48"
     },
     {
      "Ref": "NetworkingVpcPrivateSubnet2Subnet4313381B"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Datastore/AuroraCluster/Subnets/Default"
   }
  },
  "FoundationWebAppDatastoreAuroraClusterSecretD290B3CC3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"dbadmin\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Datastore/AuroraCluster/Secret/Resource"
   }
  },
  "DatastoreAuroraClusterSecretAttachment3F350821": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "FoundationWebAppDatastoreAuroraClusterSecretD290B3CC3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "DatastoreAuroraCluster2FE23DD5"
    },
    "TargetType": "AWS::RDS::DBCluster"
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Datastore/AuroraCluster/Secret/Attachment/Resource"
   }
  },
  "DatastoreAuroraCluster2FE23DD5": {
   "Type": "AWS::RDS::DBCluster",
   "Properties": {
    "CopyTagsToSnapshot": true,
    "DBClusterParameterGroupName": "default.aurora-postgresql11",
    "DBSubnetGroupName": {
     "Ref": "DatastoreAuroraClusterSubnetsD8325308"
    },
    "DatabaseName": "mydb",
    "Engine": "aurora-postgresql",
    "EngineVersion": "11.9",
    "KmsKeyId": {
     "Fn::GetAtt": [
      "CMK56817A4C",
      "Arn"
     ]
    },
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "FoundationWebAppDatastoreAuroraClusterSecretD290B3CC3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "dbadmin",
    "Port": 5432,
    "StorageEncrypted": true,
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "DatastoreDbSg2E466A34",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Datastore/AuroraCluster/Resource"
   }
  },
  "DatastoreAuroraClusterInstance17CC9C737": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "DBClusterIdentifier": {
     "Ref": "DatastoreAuroraCluster2FE23DD5"
    },
    "DBInstanceClass": "db.t4g.large",
    "DBInstanceIdentifier": "Datastore1",
    "DBSubnetGroupName": {
     "Ref": "DatastoreAuroraClusterSubnetsD8325308"
    },
    "EnablePerformanceInsights": true,
    "Engine": "aurora-postgresql",
    "PerformanceInsightsKMSKeyId": {
     "Fn::GetAtt": [
      "CMK56817A4C",
      "Arn"
     ]
    },
    "PerformanceInsightsRetentionPeriod": 7,
    "PubliclyAccessible": false
   },
   "DependsOn": [
    "NetworkingVpcPrivateSubnet1DefaultRouteDE58E6A0",
    "NetworkingVpcPrivateSubnet1RouteTableAssociation761725EA",
    "NetworkingVpcPrivateSubnet2DefaultRoute5BF16047",
    "NetworkingVpcPrivateSubnet2RouteTableAssociation9EFBB61D"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Datastore/AuroraCluster/Instance1"
   }
  },
  "DatastoreAuroraClusterInstance2FA5EF5D9": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "DBClusterIdentifier": {
     "Ref": "DatastoreAuroraCluster2FE23DD5"
    },
    "DBInstanceClass": "db.t4g.large",
    "DBInstanceIdentifier": "Datastore2",
    "DBSubnetGroupName": {
     "Ref": "DatastoreAuroraClusterSubnetsD8325308"
    },
    "EnablePerformanceInsights": true,
    "Engine": "aurora-postgresql",
    "PerformanceInsightsKMSKeyId": {
     "Fn::GetAtt": [
      "CMK56817A4C",
      "Arn"
     ]
    },
    "PerformanceInsightsRetentionPeriod": 7,
    "PubliclyAccessible": false
   },
   "DependsOn": [
    "NetworkingVpcPrivateSubnet1DefaultRouteDE58E6A0",
    "NetworkingVpcPrivateSubnet1RouteTableAssociation761725EA",
    "NetworkingVpcPrivateSubnet2DefaultRoute5BF16047",
    "NetworkingVpcPrivateSubnet2RouteTableAssociation9EFBB61D"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/Datastore/AuroraCluster/Instance2"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31S227bMAz9lr4rWpJhe3cuK4IFhZEEeR1omXFVy5IhUTECw/8+2PItLdAn8hwe8SJyzVe/Vnz5ApVbiDRfKJnw+kwgcgaV+1fnheP1X3yw7U23JlISXAs6p2Eo1ry+lqKlrvGWxT5RUpx9opFabvJOxhNeIFE48RMXOWeEBJJGj+LW2R/i1rwBvQJhBQ8WW3kHwinxQRNajaMgdNKjiAjEe4Ga2B9lqqPJ2vjg9qJrKfY6LY3U1L8e4RtSZWweCdW1MaFQfyI+DfBdeGL3muzjOXGgzii8lfR4tcaXXb5viX1m0bkv9EEH/qAdgRYYfiv4DXM/eb3xIg+/2HvBxEZJ8ZjogBuGChxJoQykCSjQQursvuZ1VJZKim66o4F008XQtgme8FwnHaHuNYM/i1/AZkjjuDPYMAkFr08mXNJgh8Fia25SYcPAk3EClNQZryNP5hzAm [...]
   },
   "Metadata": {
    "aws:cdk:path": "FoundationWebApp/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
